Final resource reload optimization (#73)
* share lang cache and read lang files only once
Cuts 60ms of lang-related time (-44%) and 165mb of allocations (-41%)

* avoid object allocations in buildIndex & indexLangFile

Cuts 22ms of buildIndex (-17%) and 52mb allocations (-32.5%)

* don't allocate pages when indexing lang files

doesn't affect perf; cuts 40mb of buildIndex or -37%

* don't parse priority unless there are several candidates
saves 15mb and deduplicates some code

* less string allocations

for scanZipPack: -21ms (-24%) and -112mb (-48%)

* leave only GuideLanguageIndex class

---------

Co-authored-by: boubou19 <miisterunknown@gmail.com>